force-app/main/default/objects/Site_Visit__c/fields/Create_Event__c.field-meta.xml
<CustomField>
    <fullName>Create_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Event</label>
    <type>Checkbox</type>
</CustomField>