force-app/main/default/objects/Site_Visit__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <label>Created From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Created_From</valueSetName>
    </valueSet>
</CustomField>