force-app/main/default/objects/Site_Visit__c/fields/Deferred_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Reason__c</fullName>
    <label>Deferred Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>