force-app/main/default/objects/Site_Visit__c/fields/Intent_to_Visit__c.field-meta.xml
<CustomField>
    <fullName>Intent_to_Visit__c</fullName>
    <label>Intent to Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Category</valueSetName>
    </valueSet>
</CustomField>