force-app/main/default/objects/Site_Visit__c/fields/No_of_People_Planned__c.field-meta.xml
<CustomField>
    <fullName>No_of_People_Planned__c</fullName>
    <label>No of People (Planned)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>