force-app/main/default/objects/Site_Visit__c/fields/No_of_People_Visited__c.field-meta.xml
<CustomField>
    <fullName>No_of_People_Visited__c</fullName>
    <label>No of People (Visited)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>