force-app/main/default/objects/Site_Visit__c/fields/Reschedul_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedul_Reason__c</fullName>
    <formula>&quot;Status: &quot; &amp; TEXT(Status__c) &amp;
IF(
    OR(
        TEXT(Status__c) = &quot;Rescheduled&quot;,
        TEXT(Status__c) = &quot;Cancelled&quot;
    ),
    &quot;  Reschedule/Cancellation Reason: &quot; &amp; TEXT(Reschedule_Cancellation_Reason__c),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reschedul Reason</label>
    <type>Text</type>
</CustomField>