force-app/main/default/objects/Site_Visit__c/fields/Reschedule_by__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reschedule From</label>
    <referenceTo>Site_Visit__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>