force-app/main/default/objects/Site_Visit__c/fields/Reschedule_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Cancellation_Reason__c</fullName>
    <label>Reschedule/Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deferred_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not suitable Time</fullName>
            </value>
            <value>
                <fullName>Weather Condition</fullName>
            </value>
            <value>
                <fullName>Traffic Condition</fullName>
            </value>
            <value>
                <fullName>Conveyance Issue</fullName>
            </value>
            <value>
                <fullName>Out of Town</fullName>
            </value>
            <value>
                <fullName>Not Informed</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>