force-app/main/default/objects/Site_Visit__c/fields/Rescheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Date__c</fullName>
    <label>Rescheduled Date</label>
    <type>Date</type>
</CustomField>