force-app/main/default/objects/Site_Visit__c/fields/Resource_Allocator__c.field-meta.xml
<CustomField>
    <fullName>Resource_Allocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Resource Allocator (User Lookup) field is added to the Site Visit to assign a responsible resource during scheduling.</description>
    <inlineHelpText>Select the responsible user to whom this Site Visit is assigned.</inlineHelpText>
    <label>Resource Allocator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>