force-app/main/default/objects/Site_Visit__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>