force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Completed_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Completed_Location__c</fullName>
    <label>Site Visit Completed Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>