force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Inspection_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Inspection_Checklist__c</fullName>
    <label>Site Visit Inspection Checklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>