force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Status__c</fullName>
    <formula>TEXT( Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Status</label>
    <type>Text</type>
</CustomField>