force-app/main/default/objects/Site_Visit__c/fields/Tenant_Signature__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Signature__c</fullName>
    <label>Tenant Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>