force-app/main/default/objects/Site_Visit__c/fields/Unit_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Unit_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Bundle</label>
    <referenceTo>Unit_Bundle__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>