force-app/main/default/objects/Site_Visit__c/fields/Unit_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Bundle_Name__c</fullName>
    <formula>Unit_Bundle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Bundle Name</label>
    <type>Text</type>
</CustomField>