force-app/main/default/objects/Site_Visit__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <formula>DATEVALUE( Visit_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>