force-app/main/default/objects/Site_Visit__c/fields/Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_Time__c</fullName>
    <label>Visit Date/Time</label>
    <type>DateTime</type>
</CustomField>