force-app/main/default/objects/Site_Visit__c/fields/visit_Time__c.field-meta.xml
<CustomField>
    <fullName>visit_Time__c</fullName>
    <formula>TEXT(DATEVALUE(Visit_Date_Time__c)) &amp; &apos;T&apos; &amp; TEXT(TIMEVALUE(Visit_Date_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>visit Time</label>
    <type>Text</type>
</CustomField>