force-app/main/default/objects/Site_Visit__c/fields/Walkin_Source__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Source__c</fullName>
    <label>Walkin Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>