force-app/main/default/objects/Site_Visit__c/validationRules/Visit_Date_Cannot_be_Past_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date_Cannot_be_Past_date</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; TEXT(Created_From__c) != $Label.Created_From_API &amp;&amp; Visit_Date_Time__c &lt; NOW()</errorConditionFormula>
    <errorMessage>&quot;Visit Date/Time&quot; cannot be past date/time.</errorMessage>
</ValidationRule>